# lect

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac
doc/: Makefile.am  lic.texi  version.texi
lic/: Makefile.am  lic.c  parse.c  parse.h  parse.y  scan.c  scan.l
po/: ChangeLog  Makevars  POTFILES.in  lect.pot
